[gd_scene load_steps=2 format=2]

[ext_resource path="res://hud/chat/chatbox.gd" type="Script" id=1]

[node name="Chatbox" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessagesContainer" type="ScrollContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1052.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="MessagesList" type="VBoxContainer" parent="MessagesContainer"]
margin_bottom = 1052.0
size_flags_vertical = 3

[node name="MessageEditor" type="LineEdit" parent="."]
margin_top = 1056.0
margin_right = 1920.0
margin_bottom = 1080.0
